surfer-gtkwave-parser/tests/snapshots/file_tests__parse_file@stimuli3.gtkw.snap
---
source: surfer-gtkwave-parser/tests/file_tests.rs
expression: snapshot
---
## Input ##

[*]
[*] GTKWave Analyzer v3.3.100 (w)1999-2019 BSI
[*] Fri Jun 21 14:25:22 2024
[*]
[dumpfile] "C:\Users\Oscar\Desktop\stimuli3.vcd"
[dumpfile_mtime] "Wed Sep 13 14:58:03 2023"
[dumpfile_size] 152150
[savefile] "C:\Users\Oscar\Desktop\stimuli3.gtkw"
[timestart] 3022
[size] 1000 600
[pos] 119 45
*-4.681415 4630 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
[treeopen] testbench_unfold.
[sst_width] 266
[signals_width] 225
[sst_expanded] 1
[sst_vpaned_height] 153
@23
[color] 5
#{testbench_unfold.filter_test.outdata1[14:0]} testbench_unfold.filter_test.outdata1[14] testbench_unfold.filter_test.outdata1[13] testbench_unfold.filter_test.outdata1[12] testbench_unfold.filter_test.outdata1[11] testbench_unfold.filter_test.outdata1[10] testbench_unfold.filter_test.outdata1[9] testbench_unfold.filter_test.outdata1[8] testbench_unfold.filter_test.outdata1[7] testbench_unfold.filter_test.outdata1[6] testbench_unfold.filter_test.outdata1[5] testbench_unfold.filter_test.outdata1[4] testbench_unfold.filter_test.outdata1[3] testbench_unfold.filter_test.outdata1[2] testbench_unfold.filter_test.outdata1[1] testbench_unfold.filter_test.outdata1[0]
@28
testbench_unfold.filter_test.reset
@420
#{testbench_unfold.filter_test.outdata1[14:0]} testbench_unfold.filter_test.outdata1[14] testbench_unfold.filter_test.outdata1[13] testbench_unfold.filter_test.outdata1[12] testbench_unfold.filter_test.outdata1[11] testbench_unfold.filter_test.outdata1[10] testbench_unfold.filter_test.outdata1[9] testbench_unfold.filter_test.outdata1[8] testbench_unfold.filter_test.outdata1[7] testbench_unfold.filter_test.outdata1[6] testbench_unfold.filter_test.outdata1[5] testbench_unfold.filter_test.outdata1[4] testbench_unfold.filter_test.outdata1[3] testbench_unfold.filter_test.outdata1[2] testbench_unfold.filter_test.outdata1[1] testbench_unfold.filter_test.outdata1[0]
@200
-
@22
#{testbench_unfold.filter_test.outdata2[14:0]} testbench_unfold.filter_test.outdata2[14] testbench_unfold.filter_test.outdata2[13] testbench_unfold.filter_test.outdata2[12] testbench_unfold.filter_test.outdata2[11] testbench_unfold.filter_test.outdata2[10] testbench_unfold.filter_test.outdata2[9] testbench_unfold.filter_test.outdata2[8] testbench_unfold.filter_test.outdata2[7] testbench_unfold.filter_test.outdata2[6] testbench_unfold.filter_test.outdata2[5] testbench_unfold.filter_test.outdata2[4] testbench_unfold.filter_test.outdata2[3] testbench_unfold.filter_test.outdata2[2] testbench_unfold.filter_test.outdata2[1] testbench_unfold.filter_test.outdata2[0]
@200
-Foo
[pattern_trace] 1
[pattern_trace] 0

## Errors ##

UnknownDirective("[*]")
UnknownDirective("[*] GTKWave Analyzer v3.3.100 (w)1999-2019 BSI")
UnknownDirective("[*] Fri Jun 21 14:25:22 2024")
UnknownDirective("[*]")
UnknownDirective("[dumpfile_mtime] \"Wed Sep 13 14:58:03 2023\"")
UnknownDirective("[dumpfile_size] 152150")
UnknownDirective("[savefile] \"C:\\Users\\Oscar\\Desktop\\stimuli3.gtkw\"")
UnknownDirective("[timestart] 3022")
UnknownDirective("[size] 1000 600")
UnknownDirective("[pos] 119 45")
UnknownLine("*-4.681415 4630 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1")
UnknownDirective("[treeopen] testbench_unfold.")
UnknownDirective("[sst_width] 266")
UnknownDirective("[signals_width] 225")
UnknownDirective("[sst_expanded] 1")
UnknownDirective("[sst_vpaned_height] 153")
Other("Couldn't parse end of bit range '14:0]} testbench_unfold.filter_test.outdata1[14] testbench_unfold.filter_test.outdata1[13] testbench_unfold.filter_test.outdata1[12] testbench_unfold.filter_test.outdata1[11] testbench_unfold.filter_test.outdata1[10] testbench_unfold.filter_test.outdata1[9] testbench_unfold.filter_test.outdata1[8] testbench_unfold.filter_test.outdata1[7] testbench_unfold.filter_test.outdata1[6] testbench_unfold.filter_test.outdata1[5] testbench_unfold.filter_test.outdata1[4] testbench_unfold.filter_test.outdata1[3] testbench_unfold.filter_test.outdata1[2] testbench_unfold.filter_test.outdata1[1] testbench_unfold.filter_test.outdata1[0': invalid digit found in string")
Other("Couldn't parse end of bit range '14:0]} testbench_unfold.filter_test.outdata1[14] testbench_unfold.filter_test.outdata1[13] testbench_unfold.filter_test.outdata1[12] testbench_unfold.filter_test.outdata1[11] testbench_unfold.filter_test.outdata1[10] testbench_unfold.filter_test.outdata1[9] testbench_unfold.filter_test.outdata1[8] testbench_unfold.filter_test.outdata1[7] testbench_unfold.filter_test.outdata1[6] testbench_unfold.filter_test.outdata1[5] testbench_unfold.filter_test.outdata1[4] testbench_unfold.filter_test.outdata1[3] testbench_unfold.filter_test.outdata1[2] testbench_unfold.filter_test.outdata1[1] testbench_unfold.filter_test.outdata1[0': invalid digit found in string")
Other("Couldn't parse end of bit range '14:0]} testbench_unfold.filter_test.outdata2[14] testbench_unfold.filter_test.outdata2[13] testbench_unfold.filter_test.outdata2[12] testbench_unfold.filter_test.outdata2[11] testbench_unfold.filter_test.outdata2[10] testbench_unfold.filter_test.outdata2[9] testbench_unfold.filter_test.outdata2[8] testbench_unfold.filter_test.outdata2[7] testbench_unfold.filter_test.outdata2[6] testbench_unfold.filter_test.outdata2[5] testbench_unfold.filter_test.outdata2[4] testbench_unfold.filter_test.outdata2[3] testbench_unfold.filter_test.outdata2[2] testbench_unfold.filter_test.outdata2[1] testbench_unfold.filter_test.outdata2[0': invalid digit found in string")
UnknownDirective("[pattern_trace] 1")
UnknownDirective("[pattern_trace] 0")

## Directives ##

Dumpfile("C:\\Users\\Oscar\\Desktop\\stimuli3.vcd")
Trace { path: "testbench_unfold.filter_test.reset", bit_range: None, color: None, flags: Some(Flags(bin | rjustify)) }
Trace { path: "-", bit_range: None, color: None, flags: Some(Flags(blank)) }
Trace { path: "-Foo", bit_range: None, color: None, flags: Some(Flags(blank)) }
