surfer-gtkwave-parser/tests/snapshots/file_tests__parse_file@with_8_bit_everything.gtkw.snap
---
source: surfer-gtkwave-parser/tests/file_tests.rs
expression: snapshot
---
## Input ##

[*]
[*] GTKWave Analyzer v3.3.118 (w)1999-2023 BSI
[*] Wed Jul 17 07:43:41 2024
[*]
[dumpfile] "/home/gustav/surfer/surfer/examples/with_8_bit.vcd"
[dumpfile_mtime] "Mon Jul  1 13:28:38 2024"
[dumpfile_size] 289
[savefile] "/home/gustav/surfer/surfer/examples/with_8_bit_everything.gtkw"
[timestart] 0
[size] 1280 1346
[pos] -781 -374
*-3.711389 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
[sst_width] 266
[signals_width] 110
[sst_expanded] 1
[sst_vpaned_height] 410
@22
logic.data[7:0]
@28
logic.data_valid
logic.not_always
[pattern_trace] 1
[pattern_trace] 0

## Errors ##

UnknownDirective("[*]")
UnknownDirective("[*] GTKWave Analyzer v3.3.118 (w)1999-2023 BSI")
UnknownDirective("[*] Wed Jul 17 07:43:41 2024")
UnknownDirective("[*]")
UnknownDirective("[dumpfile_mtime] \"Mon Jul  1 13:28:38 2024\"")
UnknownDirective("[dumpfile_size] 289")
UnknownDirective("[savefile] \"/home/gustav/surfer/surfer/examples/with_8_bit_everything.gtkw\"")
UnknownDirective("[timestart] 0")
UnknownDirective("[size] 1280 1346")
UnknownDirective("[pos] -781 -374")
UnknownDirective("[sst_width] 266")
UnknownDirective("[signals_width] 110")
UnknownDirective("[sst_expanded] 1")
UnknownDirective("[sst_vpaned_height] 410")
UnknownDirective("[pattern_trace] 1")
UnknownDirective("[pattern_trace] 0")

## Directives ##

Dumpfile("/home/gustav/surfer/surfer/examples/with_8_bit.vcd")
Markers
Trace { path: ("logic.data", Some((7, Some(0)))), color: None, flags: Some(Flags(hex | rjustify)) }
Trace { path: ("logic.data_valid", None), color: None, flags: Some(Flags(bin | rjustify)) }
Trace { path: ("logic.not_always", None), color: None, flags: None }
