surfer-gtkwave-parser/tests/snapshots/file_tests__parse_file@with_8_bit_one.gtkw.snap
---
source: surfer-gtkwave-parser/tests/file_tests.rs
expression: snapshot
---
## Input ##

[*]
[*] GTKWave Analyzer v3.3.118 (w)1999-2023 BSI
[*] Wed Jul 17 07:44:04 2024
[*]
[dumpfile] "/home/gustav/surfer/surfer/examples/with_8_bit.vcd"
[dumpfile_mtime] "Mon Jul  1 13:28:38 2024"
[dumpfile_size] 289
[savefile] "/home/gustav/surfer/surfer/examples/with_8_bit_one.gtkw"
[timestart] 0
[size] 1000 600
[pos] -1 -1
*-3.711389 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1
[sst_width] 266
[signals_width] 102
[sst_expanded] 1
[sst_vpaned_height] 150
@22
logic.data[7:0]
[pattern_trace] 1
[pattern_trace] 0

## Errors ##

UnknownDirective("[*]")
UnknownDirective("[*] GTKWave Analyzer v3.3.118 (w)1999-2023 BSI")
UnknownDirective("[*] Wed Jul 17 07:44:04 2024")
UnknownDirective("[*]")
UnknownDirective("[dumpfile_mtime] \"Mon Jul  1 13:28:38 2024\"")
UnknownDirective("[dumpfile_size] 289")
UnknownDirective("[savefile] \"/home/gustav/surfer/surfer/examples/with_8_bit_one.gtkw\"")
UnknownDirective("[timestart] 0")
UnknownDirective("[size] 1000 600")
UnknownDirective("[pos] -1 -1")
UnknownLine("*-3.711389 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1")
UnknownDirective("[sst_width] 266")
UnknownDirective("[signals_width] 102")
UnknownDirective("[sst_expanded] 1")
UnknownDirective("[sst_vpaned_height] 150")
UnknownDirective("[pattern_trace] 1")
UnknownDirective("[pattern_trace] 0")

## Directives ##

Dumpfile("/home/gustav/surfer/surfer/examples/with_8_bit.vcd")
Trace { path: "logic.data", bit_range: Some((7, 0)), flags: Some(Flags(hex | rjustify)) }
